duration commit
